# Todo_system

./: CMakeLists.txt
inc/: date_formatter.h  dateformatter.h  selection_screen.h  task.h  task_manager.h
src/: date_formatter.cpp  dateformatter.cpp  main.cpp  selection_screen.cpp  task.cpp  task_manager.cpp
test/: date_formatter_test.cpp  dateformatter_test.cpp  task_manager_test.cpp
